<resources>
    <string name="app_name">Organizer</string>

    <string name="todo_title">Todo</string>
    <string name="notes_title">Notes</string>
    <string name="profile_title">Profile</string>
    <string name="contacts_title">Contacts</string>

    <string name="description">Description</string>
    <string name="search_bar_hint">Search for tasks</string>

    <string name="in_progress_title">In progress</string>
    <string name="done_title">Done</string>
    <string name="deleted_title">Deleted</string>
    <string name="important_title">Important</string>

    <string name="recently_added_text">Recently added</string>
    <string name="my_contacts_text">My contacts</string>
    <string name="import_text">Import</string>

    <string name="field_email_hint">Email</string>
    <string name="field_phone_number_hint">Phone number</string>
    <string name="field_last_name_hint">Last name</string>
    <string name="field_first_name_hint">First name</string>
    <string name="save_contact_text">Save contact</string>

    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="authorities">com.serhiitymoshenko.organizer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="permission_aware_dialog_title">Help us</string>
    <string name="permission_aware_dialog_message">We ask you to accept some permissions, so we could made your experience the best</string>

    <string name="dialog_continue_text">Continue</string>
    <string name="dialog_cancel_text">Cancel</string>

    <string name="reminder_dialog_title">Choose option</string>
    <string name="reminder_dialog_every_day_text">Every day</string>
    <string name="reminder_dialog_none_text">None</string>
    <string name="reminder_dialog_one_time_text">One time</string>

    <string name="save_task_text">Save task</string>
    <string name="set_reminder_text">Set reminder</string>
    <string name="field_task_title_hint">Title</string>
</resources>